tests/ui/async-await/issue-74047.stderr
error[E0046]: not all trait items implemented, missing: `Error`, `try_from`
  --> $DIR/issue-74047.rs:14:1
   |
LL | impl TryFrom<OtherStream> for MyStream {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Error`, `try_from` in implementation
   |
   = help: implement the missing item: `type Error = Type;`
   = help: implement the missing item: `fn try_from(_: T) -> Result<Self, <Self as TryFrom<T>>::Error> { todo!() }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
